# dotaIIpicker

./: .gitignore  compose.yml  dockerfile  pyproject.toml  readme.md  workspace.yaml
ETL/: dowloader_ETL_v2.py  workspace.yaml
ETL/dbs/: dotaIIbase.db  dotaIIbase.duckdb  hero_names.json  optimized_matrix.h5
data_source/: dota2base.db  dowloader.py  dowloader_.py  dowloader_ETL.py  dowloader_ETL_v2.py
notebooks/: POC.ipynb  api_test.ipynb  bd_test.ipynb  modeling_test.ipynb
utils/: creds.py
