[tool.poetry]
name = "dotaiipicker"
version = "0.1.0"
description = ""
authors = ["Charubaiel <aleksandrin.a@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^1.0.10"
dagit = "^1.0.10"
requests = "^2.28.1"
pandas = "^1.5.0"
numpy = "^1.23.3"
tables = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
